--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -27,10 +27,8 @@ left: 200px;}
 margin-top: 200px;
 width: 250px;
 height: 250px;}
-.web{height: 250px;
-width: 250px;}
-.cricket{width: 250px;
-height: 250px;}
+.web{}
+.cricket
 .subtitle{font-size: 2.5rem;
 color: #66BFBF;
 font-weight: normal;}
@@ -70,7 +68,7 @@ margin-right: 200px}
 
 .yt{display: inline-flex;
 text-align: center;}
-.last-container{background-color: #0000FF}
+.last-container{background-color: #A727F1}
 hr {
   border:none;
   border-top:10px dotted grey;
